docs-archive/apache-airflow-providers-cloudant/4.1.0/_sources/_api/airflow/providers/cloudant/hooks/cloudant/index.rst.txt
airflow.providers.cloudant.hooks.cloudant
=========================================

.. py:module:: airflow.providers.cloudant.hooks.cloudant

.. autoapi-nested-parse::

   Hook for Cloudant.



Classes
-------

.. autoapisummary::

   airflow.providers.cloudant.hooks.cloudant.CloudantHook


Module Contents
---------------

.. py:class:: CloudantHook(cloudant_conn_id = default_conn_name)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`


   Interact with Cloudant. This class is a thin wrapper around the cloudant python library.

   .. seealso:: the latest documentation `here <https://python-cloudant.readthedocs.io/en/latest/>`_.

   :param cloudant_conn_id: The connection id to authenticate and get a session object from cloudant.


   .. py:attribute:: conn_name_attr
      :value: 'cloudant_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'cloudant_default'



   .. py:attribute:: conn_type
      :value: 'cloudant'



   .. py:attribute:: hook_name
      :value: 'Cloudant'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:attribute:: cloudant_conn_id
      :value: 'cloudant_default'



   .. py:method:: get_conn()

      Create an authenticated service object for connection to the Cloudant service.

      .. note::
          In the connection form:
          - 'host' equals the 'Account' (required)
          - 'login' equals the 'Username (or API Key)' (required)
          - 'password' equals the 'Password' (required)

      :return: a CloudantV1 service object backed by a session-based user/password authenticator.



